z-index fix

--- a/src/main.scss
+++ b/src/main.scss
@@ -74,3 +74,7 @@ table.same-width {
   height: 1.4em !important;
   margin-top: 0 !important;
 }
+
+.dropdown-menu {
+  z-index: 1050;
+}
